# rowannicholls.github.io

./: .gitignore  404.html  R.Rmd  R.html  R.rmd  README.md  bash.Rmd  bash.html  cpp.Rmd  cpp.html  default.html  git.Rmd  git.html  google_analytics.html  index.Rmd  index.html  index.rmd  latex.Rmd  latex.html  octave.Rmd  octave.html  python.Rmd  python.html  python.rmd  references.bib  requirements.txt  rowing.Rmd  rowing.html  sql.Rmd  sql.html  style.css  sublime_text.Rmd  sublime_text.html
.github/workflows/: static.yml
R/data/: List of Files in Folder.py  classify_using_dates.Rmd  classify_using_dates.html  contents.Rmd  contents.html  create_export_import.Rmd  create_export_import.html  create_unique_identifiers.Rmd  create_unique_identifiers.csv  create_unique_identifiers.html  demographic_tables.Rmd  demographic_tables.html  descriptive_summary_statistics.Rmd  descriptive_summary_statistics.html  filling_in_missing_data.Rmd  filling_in_missing_data.html  filter_by_appearances.Rmd  merging.Rmd  (+8 more)
python/utilities/packaging_tutorial/: pyproject.toml
python/utilities/packaging_tutorial/src/example_package_rowannicholls/: module.py
python/utilities/packaging_tutorial/tests/: test_pytest.py  test_unittest.py
rowing/: isis_flag_history.Rmd  isis_flag_history.html
sublime_text/: R.Rmd  R.html  bash.Rmd  bash.html  installation_setup.Rmd  installation_setup.html  key_bindings.Rmd  key_bindings.html  latex.Rmd  latex.html  markdown.Rmd  markdown.html  packages.Rmd  packages.html  pandoc.Rmd  pandoc.html  python.Rmd  python.html  r_markdown.Rmd  r_markdown.html
(+1037 files in other folders)
